pequena correcao no texto

--- a/naoehsopor20centavos.html
+++ b/naoehsopor20centavos.html
@@ -48,13 +48,6 @@
   <!--[if lt IE 9]>
     <script src="public/html5shiv.js"></script>
   <![endif]-->
-
-  <!-- Fav and touch icons -->
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../assets/ico/apple-touch-icon-144-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../assets/ico/apple-touch-icon-114-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/apple-touch-icon-72-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" href="../assets/ico/apple-touch-icon-57-precomposed.png">
-  <link rel="shortcut icon" href="../assets/ico/favicon.png">
 </head>
 
 <body>
@@ -68,7 +61,7 @@
     <hr>
 
     <div class="jumbotron">
-      <h1>Então é pelo que?</h1>
+      <h1>Então pelo que é?</h1>
       <p class="lead">Vamos juntos definir oq queremos! Vote em um dos itens.</p>
       <a class="btn btn-large btn-success" href="#suaIdeiaModal" data-toggle="modal">Ou de a sua idéia</a>
     </div>
@@ -119,7 +112,7 @@
 
 <template name="item">
   <blockquote data-ideia-id="{{_id}}">
-    <p data-content="{{titulo}}">{{descricao}}</p>
+    <p data-content="{{descricao}}">{{titulo}}</p>
     <small><span class="badge badge-success">{{votos}}</span>&nbsp;<a href="#" class="votarIdeia">Boa Idéia!</a></small>
   </blockquote>
 </template>
