--- a/naoehsopor20centavos.html
+++ b/naoehsopor20centavos.html
@@ -5,68 +5,41 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <!-- Le styles -->
-  <style type="text/css">
-    body {
-      padding-top: 20px;
-      padding-bottom: 40px;
-    }
-
-    /* Custom container */
-    .container-narrow {
-      margin: 0 auto;
-      max-width: 700px;
-    }
-    .container-narrow > hr {
-      margin: 30px 0;
-    }
-
-    /* Main marketing message and sign up button */
-    .jumbotron {
-      margin: 60px 0;
-      text-align: center;
-    }
-    .jumbotron h1 {
-      font-size: 72px;
-      line-height: 1;
-    }
-    .jumbotron .btn {
-      font-size: 21px;
-      padding: 14px 24px;
-    }
-
-    /* Supporting marketing content */
-    .marketing {
-      margin: 60px 0;
-    }
-    .marketing p + h4 {
-      margin-top: 28px;
-    }
-  </style>
-
   <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
   <!--[if lt IE 9]>
-    <script src="public/html5shiv.js"></script>
+    <script src="html5shiv.js"></script>
   <![endif]-->
+
+  <script>
+    new GA('UA-41827878-1');
+  </script>
 </head>
 
 <body>
 
-  <div class="container-narrow">
-
-    <div class="masthead">
-      <h3 class="muted">Não é só por 20 centavos!</h3>
+  <div id="myCarousel" class="carousel slide">
+    <div class="carousel-inner">
+      <div class="item active">
+        <img src="congresso.jpg" alt="">
+        <div class="container">
+          <div class="carousel-caption">
+            <h1>Não é só por 20 centavos!</h1>
+            <p class="lead">Então pelo que é? Vamos juntos definir!</p>
+            <p class="lead">Vote! Compartilhe!</p>
+            <a class="btn btn-large btn-success" href="#suaIdeiaModal" data-toggle="modal">Dê a sua idéia</a>
+          </div>
+        </div>
+      </div>
+      <div class="item">
+        <img src="flores_policia.jpg" alt="">
+      </div>
+      <div class="item">
+        <img src="spray_pimenta.jpg" alt="">
+      </div>
     </div>
+  </div><!-- /.carousel -->
 
-    <hr>
-
-    <div class="jumbotron">
-      <h1>Então pelo que é?</h1>
-      <p class="lead">Vamos juntos definir oq queremos! Vote em um dos itens.</p>
-      <a class="btn btn-large btn-success" href="#suaIdeiaModal" data-toggle="modal">Ou de a sua idéia</a>
-    </div>
-
-    <hr>
+  <div class="container">
 
     <div id="ideias" class="row-fluid marketing">
       {{> itens}}
@@ -75,7 +48,10 @@
     <hr>
 
     <div class="footer">
-      <p>&copy; O Gigante</p>
+      <p class="pull-left">&copy; O Gigante</p>
+      <p class="pull-right">
+        <a href="https://github.com/michetti/naoehsopor20centavos" target="_blank">Fork me on GitHub</a>
+      </p>
     </div>
 
   </div> <!-- /container -->
@@ -83,16 +59,20 @@
   <div id="suaIdeiaModal" class="modal hide fade">
     <div class="modal-header">
       <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-      <h3>Sua Idéia para melhorar o Brasil</h3>
+      <h3>Se não é por 20 centavos...</h3>
     </div>
     <div class="modal-body">
       <form id="formNovaIdeia" name="formNovaIdeia">
         <fieldset>
-          <label>Qual a idéia em linhas gerais?</label>
+          <label>É pelo quê, então?</label>
           <input id="titulo" name="titulo" type="text" class="input-block-level" placeholder="Sou contra a PEC 37">
 
-          <label>Explique um pouco melhor<label>
+          <label>Explique um pouco melhor!<label>
           <textarea id="descricao" name="descricao" class="input-block-level" rows="4" placeholder="Pq somos o único caso de democracia que condenados por corrupção legislam contra os juízes que os condenaram"></textarea>
+
+          <label>E o que precisa ser feito para isso?<label>
+          <textarea id="sugestao" name="sugestao" class="input-block-level" rows="4" placeholder="Ir as ruas no dia da votação e deixar claro para os governates nossa opinião"></textarea>
+
         </fieldset>
       </form>
     </div>
@@ -101,7 +81,6 @@
       <a href="#" class="btn btn-success" id="btnNovaIdeia">É isso</a>
     </div>
   </div>
-
 </body>
 
 <template name="itens">
@@ -112,7 +91,7 @@
 
 <template name="item">
   <blockquote data-ideia-id="{{_id}}">
-    <p data-content="{{descricao}}">{{titulo}}</p>
-    <small><span class="badge badge-success">{{votos}}</span>&nbsp;<a href="#" class="votarIdeia">Boa Idéia!</a></small>
+    <p>{{titulo}}</p>
+    <small><span class="badge badge-success">{{votos}}</span>&nbsp;<a href="#" class="votarIdeia">Votar!</a></small>
   </blockquote>
 </template>
