--- a/naoehsopor20centavos.html
+++ b/naoehsopor20centavos.html
@@ -81,6 +81,8 @@
       <a href="#" class="btn btn-success" id="btnNovaIdeia">É isso</a>
     </div>
   </div>
+
+  <div id="fb-root"></div>
 </body>
 
 <template name="itens">
@@ -93,5 +95,6 @@
   <blockquote data-ideia-id="{{_id}}">
     <p>{{titulo}}</p>
     <small><span class="badge badge-success">{{votos}}</span>&nbsp;<a href="#" class="votarIdeia">Votar!</a></small>
+    <div class="fb-like" data-href="http://naoehsopor20centavos.meteor.com/{{slug titulo}}" data-send="false" data-width="450" data-show-faces="false"></div>
   </blockquote>
 </template>
