correcoes, remove arquivos desnecessarios

--- a/naoehsopor20centavos.html
+++ b/naoehsopor20centavos.html
@@ -1,6 +1,6 @@
 <head>
   <meta charset="utf-8">
-  <title>Não é <strong>só</strong> por R$ 0,20!</title>
+  <title>Não é só por R$ 0,20!</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <meta name="author" content="">
