--- a/naoehsopor20centavos.html
+++ b/naoehsopor20centavos.html
@@ -2,13 +2,14 @@
   <meta charset="utf-8">
   <title>Não é só por R$ 0,20!</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="Não é só por R$ 0,20! Então pelo que é? Vamos definir juntos!">
 
   <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
   <!--[if lt IE 9]>
     <script src="html5shiv.js"></script>
   <![endif]-->
+
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 </head>
 
 <body>
@@ -25,12 +26,6 @@
             <a class="btn btn-large btn-success" href="#suaIdeiaModal" data-toggle="modal">Dê a sua idéia</a>
           </div>
         </div>
-      </div>
-      <div class="item">
-        <img src="flores_policia.jpg" alt="">
-      </div>
-      <div class="item">
-        <img src="spray_pimenta.jpg" alt="">
       </div>
     </div>
   </div><!-- /.carousel -->
