--- a/naoehsopor20centavos.html
+++ b/naoehsopor20centavos.html
@@ -54,6 +54,8 @@
       <h3>Se não é por R$ 0,20 ...</h3>
     </div>
     <div class="modal-body">
+      <p class="text-error">Por favor, antes de criar, verifique se não há uma proposta similar</p>
+
       <form id="formNovaIdeia" name="formNovaIdeia">
         <fieldset>
           <label>É pelo quê, então?</label>
